<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="no_alarm" translatable="false">No Alarm\n</string>
    <string name="drawer_open" translatable="false">Open drawer</string>
    <string name="drawer_close" translatable="false">Close drawer</string>
    <string name="Favorites" translatable="false">Favorites</string>
    <string name="Location" translatable="false">Location</string>
    <string name="latitude" translatable="false">latitude</string>
    <string name="longitude" translatable="false">longitude</string>
    <string name="Wind" translatable="false">Wind</string>
    <string name="Pressure" translatable="false">Pressure</string>
    <string name="Humidity" translatable="false">Humidity</string>
    <string name="AirQuality" translatable="false">Air Quality</string>
    <string name="Uv" translatable="false">Ultra Violent</string>
    <string name="Tomorrow" translatable="false">Tomorrow</string>
    <string name="feelsLike" translatable="false">Feels Like</string>
    <string name="Broken" translatable="false">broken</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="few_clouds">Few Clouds</string>
    <string name="scattered_clouds">Scattered Clouds</string>
    <string name="overcast_clouds">Overcast Clouds</string>
    <string name="rain">rain</string>
    <string name="moderate_rain">moderate rain</string>
    <string name="heavy_intensity_rain">Heavy intensity rain</string>
    <string name="very_heavy_rain">Very Heavy rain</string>
    <string name="smoke">smoke</string>
    <string name="haze">haze</string>
    <string name="dust">dust</string>
    <string name="fog">fog</string>
    <string name="ash">ash</string>
    <string name="sand">sand</string>
    <string name="squall">squall</string>
    <string name="snow">snow</string>
    <string name="mist">mist</string>
    <string name="tornado">tornado</string>
    <string name="drizzle">drizzle</string>
    <string name="light_rain">light rain</string>
    <string name="thunderstorm">thunderstorm</string>
    <string name="broken_clouds">broken clouds</string>
    <string name="visibility">Visibility</string>
    <string name="L">L</string>
    <string name="H">H</string>
    <string name="Language">Language</string>
    <string name="Ar">Ar</string>
    <string name="En">En</string>
    <string name="NoFavorites">No Favorite places</string>
    <string name="NoAlarms">No Alarms Added</string>
    <string name="Temp_unit">Temp Unit</string>
    <string name="Wind_unit">Wind Unit</string>
    <string name="Save">Save</string>
    <string name="mph">MPH</string>
    <string name="Km">KM/HR</string>
    <string name="Celsius">Celsius</string>
    <string name="Fahrenheit">Fahrenheit</string>
    <string name="C">°C</string>
    <string name="F">°F</string>
    <string name="K">°K</string>
    <string name="Kelvin">Kelvin</string>
    <string name="Home"> Home </string>
    <string name="Settings">Settings </string>
    <string name="Alarms">Alarms</string>
    <string name="Cancel">Cancel</string>
    <string name="DialogConfirmation">Are you sure you want to delete this place from favorites?</string>
    <string name="alarmDialogConfirmation">Are you sure you want to Delete Alarm?</string>
    <string name="Location_Dialog_Title">Location Options</string>
    <string name="Location_Dialog_Message">Choose an option for this location</string>
    <string name="Location_Dialog_update">Update Location and go to Favorites</string>
    <string name="Location_Dialog_Navigate">Navigate to location</string>
    <string name="Location_Dialog_Home">Go to Home screen</string>
    <string name="NoDataForLocation">No Data for this Location</string>
    <string name="Please_check_your_internet_connection_and_try_again">Please check your internet connection and try again</string>
    <string name="nointernet">No Internet Connection </string>
    <string name="connectionRestored"> Connection restored </string>
    <string name="cachedText">Aright , Fetching Cached data</string>
    <string name="cachedSnackBar">"Displaying cached data"</string>
    <string name="ManualAlarmUpdate">Weather Reminder</string>
    <string name="AlarmUpdates">Temperature is:</string>
    <string name="its">it is :</string>
    <string name="ThreeHours">"It has been 3 hours"</string>
    <string name="Yes">Yes</string>
    <string name="Today">Today</string>


</resources>
