<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!-- Main Toolbar -->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/materialCardView"
                    style="@style/CustomCardViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:backgroundTint="#34F8F5F5"
                    android:elevation="10dp"
                    app:checkedIconTint="@color/ColorOnSurface"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    >

                    <ImageButton
                        android:id="@+id/pickuplocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:background="#95FFFFFF"
                        android:src="@drawable/gps" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/hourlyRec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="clip_horizontal|start|center_horizontal|fill"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="230dp"
                        android:accessibilityLiveRegion="assertive"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        app:spanCount="1"
                        tools:itemCount="8"
                        tools:listitem="6" />

                    <TextView
                        android:id="@+id/lat"
                        android:layout_width="113dp"
                        android:layout_height="53dp"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="50dp"
                        android:background="@color/ColorOnSurface"
                        android:fontFamily="@font/alata"
                        android:gravity="center"
                        android:text="@string/latitude"

                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/lon"
                        android:layout_width="113dp"
                        android:layout_height="53dp"
                        android:layout_marginStart="240dp"
                        android:layout_marginTop="50dp"
                        android:background="@color/ColorOnSurface"
                        android:fontFamily="@font/alata"
                        android:gravity="center"
                        android:text="@string/longitude"

                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/cityText"
                        android:layout_width="430dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:fontFamily="@font/alata"
                        android:gravity="center"
                        android:text="@string/Location"
                        android:textColor="@color/white"

                        android:textSize="30sp" />

                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="198dp"
                        android:layout_height="95dp"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="80dp"
                        app:srcCompat="@drawable/cloudy" />


                    <TextView
                        android:id="@+id/Temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="250dp"
                        android:layout_marginTop="160dp"
                        android:fontFamily="@font/alata"
                        android:text="TextView"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/temp_max"
                        android:layout_width="118dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="210dp"
                        android:fontFamily="@font/alata"
                        android:text="@string/H"
                        android:textColor="#000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/temp_min"
                        android:layout_width="118dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="250dp"
                        android:layout_marginTop="210dp"
                        android:fontFamily="@font/alata"
                        android:text="@string/L"
                        android:textColor="#000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/temp_feels_like"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="250dp"
                        android:layout_marginTop="170dp"
                        android:fontFamily="@font/alata"
                        android:text=" "
                        android:textColor="#000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/Descriptions"
                        android:layout_width="227dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="170dp"
                        android:fontFamily="@font/alata"
                        android:text=" "
                        android:textColor="#000"
                        android:textSize="20sp" />


                </com.google.android.material.card.MaterialCardView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/materialCardView"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="7dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/materialCardView">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/materialCardView2"
                        android:layout_width="388dp"
                        android:layout_height="229dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:background="#7CB342"
                        android:elevation="30dp"
                        app:cardBackgroundColor="#4F7CB342"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/PressureGraphic"
                            android:layout_width="59dp"
                            android:layout_height="66dp"
                            android:layout_marginStart="27dp">

                        </ImageView>

                        <TextView
                            android:id="@+id/pressure"
                            android:layout_width="106dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="80dp"
                            android:fontFamily="@font/alata"
                            android:hint="pressure"
                            android:text="@string/Pressure"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="20sp">

                        </TextView>

                        <TextView
                            android:id="@+id/pressureval"
                            android:layout_width="66dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="40dp"
                            android:layout_marginTop="55dp"
                            android:fontFamily="@font/alata"
                            android:hint="null"
                            android:textSize="14sp">

                        </TextView>

                        <ImageView
                            android:id="@+id/windGraphic"
                            android:layout_width="64dp"
                            android:layout_height="59dp"
                            android:layout_marginStart="150dp">

                        </ImageView>

                        <TextView
                            android:id="@+id/windval"
                            android:layout_width="66dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="160dp"
                            android:layout_marginTop="55dp"
                            android:fontFamily="@font/alata"
                            android:hint="null"
                            android:textSize="14sp">

                        </TextView>

                        <TextView
                            android:id="@+id/wind"
                            android:layout_width="89dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="150dp"
                            android:layout_marginTop="80dp"
                            android:fontFamily="@font/alata"
                            android:hint="wind"
                            android:text="@string/Wind"
                            android:textColor="#000000"
                            android:textSize="20sp">

                        </TextView>

                        <ImageView
                            android:id="@+id/visibilitygraphic"
                            android:layout_width="64dp"
                            android:layout_height="59dp"
                            android:layout_marginStart="260dp"></ImageView>

                        <TextView
                            android:id="@+id/visibilityval"
                            android:layout_width="66dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="270dp"
                            android:layout_marginTop="55dp"
                            android:fontFamily="@font/alata"
                            android:hint="null"
                            android:textSize="14sp"></TextView>

                        <TextView
                            android:id="@+id/visibility"
                            android:layout_width="105dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="250dp"
                            android:layout_marginTop="80dp"
                            android:fontFamily="@font/alata"
                            android:hint="visibility"
                            android:text="@string/visibility"
                            android:textColor="#000000"
                            android:textSize="20sp"></TextView>

                        <ImageView
                            android:id="@+id/humiditygraphic"
                            android:layout_width="64dp"
                            android:layout_height="59dp"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="110dp"></ImageView>

                        <TextView
                            android:id="@+id/humidityval"
                            android:layout_width="66dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="40dp"
                            android:layout_marginTop="170dp"
                            android:fontFamily="@font/alata"
                            android:hint="null"
                            android:textSize="14sp"></TextView>

                        <TextView
                            android:id="@+id/humidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="190dp"
                            android:fontFamily="@font/alata"
                            android:hint="humidity"
                            android:text="@string/Humidity"
                            android:textColor="#000000"
                            android:textSize="20sp">

                        </TextView>

                        <TextView
                            android:id="@+id/airqualityval"
                            android:layout_width="66dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="150dp"
                            android:layout_marginTop="170dp"
                            android:fontFamily="@font/alata"
                            android:hint="null"
                            android:textSize="14sp"></TextView>

                        <TextView
                            android:id="@+id/airquality"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="130dp"
                            android:layout_marginTop="190dp"
                            android:fontFamily="@font/alata"
                            android:hint="Air Quality"
                            android:text="@string/AirQuality"
                            android:textColor="#000000"
                            android:textSize="20sp">

                        </TextView>

                        <ImageView
                            android:id="@+id/airqualitygraphic"
                            android:layout_width="64dp"
                            android:layout_height="59dp"
                            android:layout_marginStart="150dp"
                            android:layout_marginTop="110dp">

                        </ImageView>

                        <TextView
                            android:id="@+id/uvval"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="260dp"
                            android:layout_marginTop="185dp"
                            android:fontFamily="@font/alata"
                            android:hint="UV"
                            android:text="@string/Uv"
                            android:textColor="#000000"
                            android:textSize="20sp">

                        </TextView>

                        <ImageView
                            android:id="@+id/uvgraphic"
                            android:layout_width="64dp"
                            android:layout_height="59dp"
                            android:layout_marginStart="260dp"
                            android:layout_marginTop="110dp">

                        </ImageView>

                    </com.google.android.material.card.MaterialCardView>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/dailyRec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/materialCardView2"></androidx.recyclerview.widget.RecyclerView>

                </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <!-- Map Fragment Container -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:name="com.example.weatherapp.MapsFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            android:visibility="gone"
            app:navGraph="@navigation/navigation">
        </androidx.fragment.app.FragmentContainerView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="117dp"
        android:layout_height="765dp"
        android:layout_gravity="start"
        app:menu="@menu/menu_item" />
</androidx.drawerlayout.widget.DrawerLayout>







